--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "15.4.1",
     "react-native": "0.42.0",
+    "react-native-deck-swiper": "^1.1.6",
     "react-native-material-kit": "^0.4.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
-    "redux-actions": "^2.0.3"
+    "redux-actions": "^2.0.3",
+    "redux-logger": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
