--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prop-types": "^15.5.10",
     "react": "15.4.1",
     "react-native": "0.42.0",
-    "react-native-deck-swiper": "^1.1.6",
+    "react-native-config": "^0.5.0",
+    "react-native-deck-swiper": "^1.1.9",
     "react-native-material-kit": "^0.4.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
