--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.42.0",
     "react-native-config": "^0.5.0",
     "react-native-deck-swiper": "^1.1.9",
+    "react-native-easy-toast": "^1.0.6",
     "react-native-material-kit": "^0.4.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
