--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-native-deck-swiper": "^1.1.9",
     "react-native-easy-toast": "^1.0.6",
     "react-native-material-kit": "^0.4.1",
+    "react-native-star-rating": "^1.0.7",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
