--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "@turf/distance": "^4.4.0",
     "prop-types": "^15.5.10",
-    "react": "15.4.1",
-    "react-native": "0.42.2",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.45.0",
     "react-native-config": "^0.5.0",
     "react-native-deck-swiper": "^1.1.9",
     "react-native-easy-toast": "^1.0.6",
     "react-native-fast-image": "0.0.11",
+    "react-native-maps": "^0.15.3",
     "react-native-material-kit": "^0.4.1",
     "react-native-star-rating": "^1.0.7",
     "react-native-vector-icons": "^4.2.0",
@@ -31,7 +32,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.0",
     "jest": "20.0.0",
-    "react-test-renderer": "15.4.1"
+    "react-test-renderer": "16.0.0-alpha.12"
   },
   "jest": {
     "preset": "react-native",
