--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-maps": "^0.15.3",
     "react-native-material-kit": "^0.4.1",
     "react-native-star-rating": "^1.0.7",
+    "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.4",
