--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.0",
+    "react-native-communications": "^2.2.1",
     "react-native-config": "^0.5.0",
     "react-native-deck-swiper": "^1.1.9",
     "react-native-easy-toast": "^1.0.6",
