--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <permission android:name="com.maps.permission.MAPS_RECEIVE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.maps.permission.MAPS_RECEIVE" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -31,7 +33,7 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
       <meta-data
-             android:name="com.google.android.geo.API_KEY"
+             android:name="com.google.android.maps.v2.API_KEY"
              android:value="@string/GOOGLE_MAPS_API_KEY"/>
 
     </application>
