--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
     "react-native-star-rating": "^1.0.7",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.3",
-    "redux-logger": "^3.0.1"
+    "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
